--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -3,7 +3,7 @@
   .main-container {
     min-height: 100%;
     transition: margin-left .28s;
-    margin-left: $sideBarWidth;
+    margin-left: $sideBarWidth - 35;
     position: relative;
   }
 
@@ -19,6 +19,7 @@
     left: 0;
     z-index: 1001;
     overflow: hidden;
+    margin-left: -30px;
 
     // reset element-ui css
     .horizontal-collapse-transition {
@@ -82,6 +83,7 @@
 
     & .nest-menu .el-submenu>.el-submenu__title,
     & .el-submenu .el-menu-item {
+      margin-left:-35px;
       min-width: $sideBarWidth !important;
       background-color: $subMenuBg !important;
 
@@ -97,7 +99,7 @@
     }
 
     .main-container {
-      margin-left: 54px;
+      margin-left: 25px;
     }
 
     .submenu-title-noDropdown {
@@ -108,11 +110,11 @@
         padding: 0 !important;
 
         .svg-icon {
-          margin-left: 20px;
+          margin-left: 10px;
         }
 
         .sub-el-icon {
-          margin-left: 19px;
+          margin-left: 10px;
         }
       }
     }
@@ -124,11 +126,11 @@
         padding: 0 !important;
 
         .svg-icon {
-          margin-left: 20px;
+          margin-left: 10px;
         }
 
         .sub-el-icon {
-          margin-left: 19px;
+          margin-left: 10px;
         }
 
         .el-submenu__icon-arrow {
